# clash-compiler

./: .gitlab-ci.yml  cabal.project  progress  repld  stack.yaml
.ci/: cabal.project.local  setup.sh  test.sh
.ci/docker/: Dockerfile
.ci/gitlab/: benchmark.yml  pipeline.yml  publish.yml  tests.yml
.circleci/: config.yml
benchmark/common/: BenchmarkCommon.hs
clash-cores/src/Clash/Cores/LatticeSemi/Blackboxes/: IO.hs
clash-ghc/: clash-ghc.cabal
clash-ghc/src-bin-841/Clash/: Main.hs
clash-ghc/src-bin-841/Clash/GHCi/: UI.hs
clash-ghc/src-bin-861/Clash/: Main.hs
clash-ghc/src-bin-861/Clash/GHCi/: UI.hs
clash-ghc/src-bin-881/Clash/: Main.hs
clash-ghc/src-bin-881/Clash/GHCi/: UI.hs
clash-ghc/src-ghc/Clash/GHC/: ClashFlags.hs  GHC2Core.hs  LoadModules.hs
clash-ghc/src-ghc/Clash/GHC/Evaluator/: Primitive.hs
clash-ghc/src-ghc/Clash/GHC/PartialEval/: Eval.hs
clash-ghc/src-ghc/Clash/GHC/PartialEval/Primitive/: Bit.hs  BitVector.hs  ByteArray.hs  Char.hs  Double.hs  Enum.hs  Float.hs  FromAst.hs  GhcMisc.hs  Index.hs  Int.hs  Integer.hs  Natural.hs  Promoted.hs  Signed.hs  Strategy.hs  ToAst.hs  Transformations.hs  Unboxed.hs  Unsigned.hs  Vector.hs  Word.hs
clash-lib/: clash-lib.cabal
clash-lib/src/Clash/: Backend.hs  Driver.hs  Netlist.hs  Netlist.hs-boot
clash-lib/src/Clash/Backend/: SystemVerilog.hs  VHDL.hs  Verilog.hs
clash-lib/src/Clash/Core/: Termination.hs  VarEnv.hs
clash-lib/src/Clash/Core/PartialEval/: Monad.hs  NormalForm.hs
clash-lib/src/Clash/Driver/: Types.hs
clash-lib/src/Clash/Netlist/: BlackBox.hs  Id.hs  Types.hs  Util.hs
clash-lib/src/Clash/Netlist/BlackBox/: Parser.hs  Types.hs  Util.hs
clash-lib/src/Clash/Netlist/Id/: SystemVerilog.hs  VHDL.hs  Verilog.hs
clash-lib/src/Clash/Normalize/: Strategy.hs  Transformations.hs  Util.hs
clash-lib/src/Clash/Primitives/: DSL.hs  Types.hs
clash-lib/src/Clash/Primitives/Clash/: Magic.hs  Transformations.hs  XException.hs
clash-lib/src/Clash/Primitives/Clash/Class/: BitPack.hs  Exp.hs
clash-lib/src/Clash/Primitives/Clash/Debug/: Trace.hs
clash-lib/src/Clash/Primitives/Intel/: ClockGen.hs
clash-lib/src/Clash/Primitives/Sized/: Vector.hs
clash-lib/tests/: unittests.hs
clash-lib/tests/Clash/Tests/Netlist/: Id.hs
clash-prelude/: clash-prelude.cabal
clash-prelude/src/Clash/Explicit/: Prelude.hs  Reset.hs
clash-prelude/src/Clash/Signal/Bundle/: Internal.hs
clash-prelude/src/Clash/Sized/: Fixed.hs
clash-prelude/src/Clash/Sized/Internal/: Index.hs  Signed.hs
clash-prelude/tests/: unittests.hs
clash-prelude/tests/Clash/Tests/Laws/: Enum.hs  SaturatingNum.hs
clash-shake/: clash-shake.cabal
clash-shake/src/Clash/: Shake.hs
clash-shake/src/Clash/Shake/: Cabal.hs  Example.hs
docs/developing-hardware/: flags.rst
tests/shouldwork/Basic/: Parameters.hs
tests/shouldwork/BlackBox/: TemplateFunction.hs
tests/shouldwork/Netlist/: NoDeDup.hs
tests/shouldwork/Signal/: ResetSynchronizer.hs
tests/shouldwork/TopEntity/: T1182A.hs  T1182B.hs
testsuite/: Main.hs  partial-eval.hs
testsuite/src/Test/Tasty/: Clash.hs  Program.hs
testsuite/src/Test/Tasty/Clash/: CoreTest.hs  NetlistTest.hs
(+46 files in other folders)
